--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ button {
   color: transparent;
   background: var(--color-neutral-light);
   border-radius: 5px;
-  transition: transform 1s;
+  transition: transform 0.75s;
 }
 
 .space {
@@ -136,6 +136,7 @@ button {
   left: 0;
   right: 0;
   border-radius: 5px;
+  z-index: 1;
 }
 
 .title {
